--- a/index.html
+++ b/index.html
@@ -167,6 +167,6 @@
         
     </style>
 
-    <a href="https://sudeepdeve.github.io/Indentification-of-problem-/">Next Page</a> 
+    <a href="https://sudeepdeve.github.io/Indentification-of-problem-/" class="custom-button">Next Page</a> 
 </body>
 </html>
