--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+..........<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -76,7 +76,7 @@
 <div class="container">
     <table>
         <tr>
-            <th>Week</th>
+            <th>Major Steps</th>
             <th>Activity</th>
             <th>W1</th>
             <th>W2</th>
