--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
             <th>W4</th>
         </tr>
         <tr>
-            <td rowspan="2" class="activity">Cycle Nomination</td>
-            <td>Milestone Chart</td>
+            
+            <td rowspan="2" class="activity"><h4>Circle Identification</h4></td>
+            <td>Circle Formation</td>
             <td></td>
             <td style="background-color: #ccc;">✔</td>
             <td></td>
@@ -99,7 +100,7 @@
             <td></td>
         </tr>
         <tr>
-            <td rowspan="2" class="activity">Situation Observation</td>
+            <td rowspan="2" class="activity"><h4>Situation Observation</td></h4>
             <td>Data Collection</td>
             <td></td>
             <td></td>
@@ -114,7 +115,7 @@
             <td style="background-color: #ccc;">✔</td>
         </tr>
         <tr>
-            <td rowspan="2" class="activity">Target Identification</td>
+            <td rowspan="2" class="activity"><h4>Target Identification</td></h4>
             <td>Getting Target</td>
             <td></td>
             <td></td>
@@ -129,7 +130,7 @@
             <td style="background-color: #ccc;">✔</td>
         </tr>
         <tr>
-            <td rowspan="2" class="activity">Analysis & Causes</td>
+            <td rowspan="2" class="activity"><h4>Analysis & Causes</td> </h4>
             <td>Analysis of Causes</td>
             <td></td>
             <td></td>
